新增表带页面

--- a/w_wanbiao-brand.html
+++ b/w_wanbiao-brand.html
@@ -898,7 +898,7 @@
                             <a href="w_wanbiao-fast.html">极速选表</a>
                             <i class="red_circle"></i>
                         </li>
-                        <li><a href="w_wanbiao-brand.html">品牌馆</a></li>
+                        <li><a href="w_wanbiao-brand.html" style="border-bottom: 3px solid #cc5252">品牌馆</a></li>
                         <li><a href="javascript:void(0)">秒杀</a></li>
                         <li><a href="javascript:void(0)">体验中心</a></li>
                         <li><a href="javascript:void(0)">名匠维修</a></li>
