--- a/w_wanbiao-fast.html
+++ b/w_wanbiao-fast.html
@@ -895,7 +895,7 @@
                         <li><a href="w_wanbiao-man.html">男表</a></li>
                         <li><a href="w_wanbiao-woman.html">女表</a></li>
                         <li class="spc">
-                            <a href="w_wanbiao-fast.html">极速选表</a>
+                            <a href="w_wanbiao-fast.html" style="border-bottom: 3px solid #cc5252">极速选表</a>
                             <i class="red_circle"></i>
                         </li>
                         <li><a href="w_wanbiao-brand.html">品牌馆</a></li>
