--- a/w_wanbiao-man.html
+++ b/w_wanbiao-man.html
@@ -892,7 +892,7 @@
                 </div>
                 <div class="good_list clearfix">
                     <ul>
-                        <li><a href="w_wanbiao-man.html">男表</a></li>
+                        <li><a href="w_wanbiao-man.html"style="border-bottom: 3px solid #cc5252">男表</a></li>
                         <li><a href="w_wanbiao-woman.html">女表</a></li>
                         <li class="spc">
                             <a href="w_wanbiao-fast.html">极速选表</a>
@@ -1388,7 +1388,7 @@
                     <div class="w_classify2">
                         <span>全部分类</span>
                         <span>腕表</span>
-                        <a class="w_classifya"type="https://www.wbiao.cn/peijian/biaodai/">表带</a>
+                        <a class="w_classifya" href="w_wanbiao-watchband.html">表带</a>
                     </div>
                     <div class="w_classify3">
                         <span>价格</span>
@@ -1605,7 +1605,7 @@
                                         <li class="w_foot1"> <a class="w_classifya" href="javascript:void(0)">VI-8 AVI-8</a></li> 
                                         <li class="w_foot1"> <a class="w_classifya" href="javascript:void(0)">奥尼卡 AONIKA</a></li> 
                                     </ul> 
-                                    <ul class="W_clearfix"> 
+                                    <ul class="w_clearfix"> 
                                         <li class="w_foot1"> <a  class="w_classifya" href="javascript:void(0)">百达翡丽 Patek Philippe</a></li> 
                                         <li class="w_foot1"> <a  class="w_classifya" href="javascript:void(0)">宝玑 Breguet</a></li> 
                                         <li class="w_foot1"> <a  class="w_classifya" href="javascript:void(0)">宝珀 Blancpain</a></li> 
@@ -1641,7 +1641,7 @@
                                         <li class="w_foot1"> <a class="w_classifya" href="javascript:void(0)">法斯蒂纳 Festina</a></li> 
                                         <li class="w_foot1"> <a class="w_classifya" href="javascript:void(0)">Fossil Fossil</a></li> 
                                     </ul> 
-                                    <ul class="clearfix"> 
+                                    <ul class="w_clearfix"> 
                                         <li class="w_foot1"> <a class="w_classifya" href="javascript:void(0)">格拉苏蒂∙原创 Glashutte</a></li> 
                                         <li class="w_foot1"> <a class="w_classifya" href="javascript:void(0)">Guess Guess</a></li> 
                                         <li class="w_foot1"> <a class="w_classifya" href="javascript:void(0)">古驰 Gucci</a></li> 
@@ -1844,8 +1844,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="w_classify6">
-                        <div class="w_class6-list1">
+                    <div class="w_class6-list1">
                             <div class="w_class6-Name1"> 
                                 <span class="w_class-spanAdd">外壳材质</span>
                                 <div class="w_class6-lt1">
@@ -2007,7 +2006,8 @@
                                     <span class="w_class6-h12">取消</span>
                                 </div>
                             </div> 
-                        </div>
+                    </div>
+                    <div class="w_classify6">
                         <div class="w_class6-list2">
                             <div class="w_class6-Name3"> 
                                 <span class="w_class-spanAdd">镜面材质</span>
