品牌馆版块完成

--- a/index.html
+++ b/index.html
@@ -1190,8 +1190,8 @@
         <!-- 限时购结束 -->
         <!-- 本月爆款开始 -->
         <div class="zd_index_boom wrap clearfix">
-            <i class="index_tab_btns_left"></i>
-            <i class="index_tab_btns_right"></i>
+            <i class="index_boom_btns_left"></i>
+            <i class="index_boom_btns_right"></i>
             <div class="zd_index_boom_tit clearfix">
                 <p>本月爆款</p>
                 <ul>
@@ -1382,9 +1382,9 @@
         <!-- 二手拍卖结束 -->
         <!-- 时尚腕表开始 -->
         <div class="zd_index_boom wrap clearfix">
-            <i class="index_tab_btns_left"></i>
-            <i class="index_tab_btns_right"></i>
-            <div class="zd_index_boom_tit clearfix">
+            <i class="index_fashion_btns_left"></i>
+            <i class="index_fashion_btns_right"></i>
+            <div class="zd_index_fashion_tit clearfix">
                 <p>时尚腕表</p>
                 <ul>
                     <li>明星同款
@@ -1422,9 +1422,9 @@
         <!-- 时尚腕表结束 -->
         <!-- 运动、智能表开始 -->
         <div class="zd_index_boom wrap clearfix">
-            <i class="index_tab_btns_left"></i>
-            <i class="index_tab_btns_right"></i>
-            <div class="zd_index_boom_tit clearfix">
+            <i class="index_sport_btns_left"></i>
+            <i class="index_sport_btns_right"></i>
+            <div class="zd_index_sport_tit clearfix">
                 <p>运动、智能表</p>
                 <ul>
                     <li>领券更优惠
@@ -1466,7 +1466,7 @@
                 <i class="index_tab_btns_left"></i>
                 <i class="index_tab_btns_right"></i>
             </div>
-            <div class="zd_index_boom_tit clearfix">
+            <div class="zd_index_chart_tit clearfix">
                 <p>排行榜</p>
                 <ul>
                     <li>男表
@@ -1733,7 +1733,7 @@
                 <i class="index_tab_btns_brand_left"></i>
                 <i class="index_tab_btns_brand_right"></i>
             </div>
-            <div class="zd_index_boom_tit clearfix">
+            <div class="zd_index_brand_tit clearfix">
                 <p>品牌馆</p>
                 <ul>
                     <li>高级
@@ -1756,7 +1756,8 @@
                     <a href="javascript:void(0)">查看更多&gt;</a>
                 </div>
             </div>
-            <div class="index_brand_tabList clearfix">
+            <div class="index_brand_tabListbox">
+                <div class="index_brand_tabList clearfix">
                 <div class="index_brand_tab clearfix">
                     <a href="javascript:void(0)">
                         <img src="images/index_brand_tab1.jpg">
@@ -1786,19 +1787,19 @@
                 <div class="index_brand_imgList clearfix">
                     <a href="javascript:void(0)">
                         <img src="images/index_brand_imgList1.jpg">
-                        <p class="index_brand_tabList_hover">百达翡丽</p>
+                        <p class="index_brand_tabList_hover">浪琴</p>
                     </a>
                     <a href="javascript:void(0)">
                         <img src="images/index_brand_imgList2.jpg">
-                        <p class="index_brand_tabList_hover">江诗丹顿</p>
+                        <p class="index_brand_tabList_hover">爱宝时</p>
                     </a>
                     <a href="javascript:void(0)">
                         <img src="images/index_brand_imgList3.jpg">
-                        <p class="index_brand_tabList_hover">亨利慕时</p>
+                        <p class="index_brand_tabList_hover">泰格豪雅</p>
                     </a>
                     <a href="javascript:void(0)">
                         <img src="images/index_brand_imgList4.jpg">
-                        <p class="index_brand_tabList_hover">宝玑</p>
+                        <p class="index_brand_tabList_hover">菲拉格慕</p>
                     </a>
                     <a href="javascript:void(0)">
                         <img src="images/index_brand_imgList5.jpg">
@@ -1809,7 +1810,225 @@
                         <p class="index_brand_tabList_hover">伯爵</p>
                     </a>
                 </div>
+                </div>
+                <div class="index_brand_tabList clearfix" style="display: none;">
+                <div class="index_brand_tab clearfix">
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_tab5.jpg">
+                        <p class="index_brand_above">
+                            <img src="images/index_brand_tab_above5.jpg">
+                        </p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_tab6.jpg">
+                        <p class="index_brand_above">
+                            <img src="images/index_brand_tab_above6.jpg">
+                        </p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_tab7.jpg">
+                        <p class="index_brand_above">
+                            <img src="images/index_brand_tab_above7.jpg">
+                        </p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_tab8.jpg">
+                        <p class="index_brand_above">
+                            <img src="images/index_brand_tab_above8.jpg">
+                        </p>
+                    </a>
+                </div>
+                <div class="index_brand_imgList clearfix">
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList7.jpg">
+                        <p class="index_brand_tabList_hover">百达翡丽</p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList8.jpg">
+                        <p class="index_brand_tabList_hover">江诗丹顿</p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList9.jpg">
+                        <p class="index_brand_tabList_hover">亨利慕时</p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList10.jpg">
+                        <p class="index_brand_tabList_hover">宝玑</p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList11.jpg">
+                        <p class="index_brand_tabList_hover">宝珀</p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList12.jpg">
+                        <p class="index_brand_tabList_hover">伯爵</p>
+                    </a>
+                </div>
+                </div>
+                <div class="index_brand_tabList clearfix" style="display: none;">
+                <div class="index_brand_tab clearfix">
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_tab9.jpg">
+                        <p class="index_brand_above">
+                            <img src="images/index_brand_tab_above9.jpg">
+                        </p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_tab10.jpg">
+                        <p class="index_brand_above">
+                            <img src="images/index_brand_tab_above10.jpg">
+                        </p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_tab11.jpg">
+                        <p class="index_brand_above">
+                            <img src="images/index_brand_tab_above11.jpg">
+                        </p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_tab12.jpg">
+                        <p class="index_brand_above">
+                            <img src="images/index_brand_tab_above12.jpg">
+                        </p>
+                    </a>
+                </div>
+                <div class="index_brand_imgList clearfix">
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList1.jpg">
+                        <p class="index_brand_tabList_hover">劳力士</p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList2.jpg">
+                        <p class="index_brand_tabList_hover">万国</p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList3.jpg">
+                        <p class="index_brand_tabList_hover">库尔沃</p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList4.jpg">
+                        <p class="index_brand_tabList_hover">欧米茄</p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList5.jpg">
+                        <p class="index_brand_tabList_hover">柏高</p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList6.jpg">
+                        <p class="index_brand_tabList_hover">卡洛夫</p>
+                    </a>
+                </div>
+                </div>
+                <div class="index_brand_tabList clearfix" style="display: none;">
+                <div class="index_brand_tab clearfix">
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_tab13.jpg">
+                        <p class="index_brand_above">
+                            <img src="images/index_brand_tab_above13.jpg">
+                        </p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_tab14.jpg">
+                        <p class="index_brand_above">
+                            <img src="images/index_brand_tab_above14.jpg">
+                        </p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_tab15.jpg">
+                        <p class="index_brand_above">
+                            <img src="images/index_brand_tab_above15.jpg">
+                        </p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_tab16.jpg">
+                        <p class="index_brand_above">
+                            <img src="images/index_brand_tab_above16.jpg">
+                        </p>
+                    </a>
+                </div>
+                <div class="index_brand_imgList clearfix">
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList19.jpg">
+                        <p class="index_brand_tabList_hover">天梭</p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList20.jpg">
+                        <p class="index_brand_tabList_hover">赫柏林</p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList21.jpg">
+                        <p class="index_brand_tabList_hover">美度</p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList22.jpg">
+                        <p class="index_brand_tabList_hover">迪沃斯</p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList23.jpg">
+                        <p class="index_brand_tabList_hover">西铁城</p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList24.jpg">
+                        <p class="index_brand_tabList_hover">东方双狮</p>
+                    </a>
+                </div>
+                </div>
+                <div class="index_brand_tabList clearfix" style="display: none;">
+                <div class="index_brand_tab clearfix">
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_tab17.jpg">
+                        <p class="index_brand_above">
+                            <img src="images/index_brand_tab_above17.jpg">
+                        </p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_tab18.jpg">
+                        <p class="index_brand_above">
+                            <img src="images/index_brand_tab_above18.jpg">
+                        </p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_tab19.jpg">
+                        <p class="index_brand_above">
+                            <img src="images/index_brand_tab_above19.jpg">
+                        </p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_tab20.jpg">
+                        <p class="index_brand_above">
+                            <img src="images/index_brand_tab_above20.jpg">
+                        </p>
+                    </a>
+                </div>
+                <div class="index_brand_imgList clearfix">
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList25.jpg">
+                        <p class="index_brand_tabList_hover">卡西欧</p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList26.jpg">
+                        <p class="index_brand_tabList_hover">驰客</p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList27.jpg">
+                        <p class="index_brand_tabList_hover">斯沃琪</p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList28.jpg">
+                        <p class="index_brand_tabList_hover">玛莎拉蒂</p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList29.jpg">
+                        <p class="index_brand_tabList_hover">天铭</p>
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/index_brand_imgList30.jpg">
+                        <p class="index_brand_tabList_hover">雍加毕索</p>
+                    </a>
+                </div>
+                </div>
             </div>
+            
         </div>
         <!-- 品牌馆结束 -->
         <!-- 主体部分结束 -->
