秒杀页面 完成

--- a/register.html
+++ b/register.html
@@ -18,7 +18,7 @@
         	<div class="r-content">
             <p>注册万表会员</p>
             <div class="r-content-from">             
-            	<form action="http://localhost/register.php" method="post" onsubmit="return check()" class="r-content-from1">
+            	<form action="http://localhost/wanbiao/register.php" method="post" onsubmit="return check()" class="r-content-from1">
                     <div>
                         <em class="r-content-from-phone"></em>
                         <input id="phone" type="text" placeholder="请输入手机号码" name="phone" maxlength="11">
@@ -64,7 +64,7 @@
                         <span id="error4">两次密码不一致，请检查你的密码</span>
                     </div>
                     <!-- <input id="r-content-from-last" type="text"  placeholder="如有推荐人，请填写推荐人手机号" name="people"  maxlength="11"> -->
-                    <input type="submit" value="立即注册" class="r-content-from-submit"></input>
+                    <input type="submit" value="立即注册" class="r-content-from-submit">
                     <p>点击“立即注册”，即表示您同意并愿意遵守
                         <a href="javascript:void(0)">万表网用户协议</a>
                     </p>
