--- a/shop.html
+++ b/shop.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="shop.css">
     <link rel="stylesheet" href="ydetails.css">
     <script src="shop.js"></script>
-    <script src="shipai.js"></script>
+    <!-- <script src="shipai.js"></script> -->
     <title>Document</title>
 </head>
 <body>
@@ -756,8 +756,8 @@
                                     <img src="https://image8.wbiao.co/shop/201701_10_424_23_33_20_09_001_87288.jpg" alt="">
                                 </div>
                                 <div class="right">
-                                    <p class="p1">欧米茄-碟飞系列 424.23.33.20.09.001 机械女表</p>
-                                    <p class="pr"><b id="pricc">￥2120</b><em>x<i class="coun">0</i></em><span class="delete-g">删除</span></p>
+                                    <span class="p1">欧米茄-碟飞系列 424.23.33.20.09.001 机械女表</span>
+                                    <span class="pr"><b id="pricc">￥2120</b><em>x<i class="coun">0</i></em><span class="delete-g">删除</span></span>
                                     
                                 </div>
                             </div>
@@ -789,7 +789,7 @@
                         </p>
                         <div class="collect-g">
                             <p class="p1"><img src="https://image8.wbiao.co/shop/7ddedc6efcf6440e88ab7743fbc85934.jpg" alt=""></p>
-                            <p class="p2">￥2120</p>
+                            <span class="p2">￥2120</span>
                             <p class="p3">加入购物车</p>
                             <div class="bottom">
                                 <a href="javascript:void(0)">查看更多</a>
@@ -816,5 +816,6 @@
             </div>
         </div>
     </div>
+    <script src="service.js"></script>
 </body>
 </html>
