--- a/service.html
+++ b/service.html
@@ -9,6 +9,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <link rel="stylesheet" href="ydetails.css">
 <script src="http://www.weizoom.com/static/resources/js/jquery-1.7.1.min.js"></script>
+<script src="service.js"></script>
 <script src="shipai.js"></script>
 </head>
 <body>
