--- a/register.html
+++ b/register.html
@@ -12,8 +12,8 @@
 <body>
     <div class="r-container">
         <div class="r-head">
-            <img src="image/logo-icon.png" alt="">
-            <img src="image/slogan-0224.png" alt="">
+            <img src="images/logo-icon.png" alt="">
+            <img src="images/slogan-0224.png" alt="">
         </div>    
         	<div class="r-content">
             <p>注册万表会员</p>
