合并前 修改

--- a/seckill.html
+++ b/seckill.html
@@ -973,6 +973,11 @@
             <!-- <div class="index_search">劳力士</div> -->
         </div>
     </div>
+    <div class="m-container-fixed">
+        <img src="images/qr-code.jpg" alt>
+        <p>下载APP享更多优惠</p>
+        <span class="m-top">TOP <span></span></span>
+    </div>
     <!-- 万表网首部结束  -->
     <!-- 主体部分开始 -->
     <div class="swiper-container1">
@@ -1005,6 +1010,7 @@
         </div>
     </div>
     <div class="m-container">
+        
         <div class="m-content">
             <div class="m-content-head">
                 <a href="javascript:void(0)">
