--- a/credit-card.html
+++ b/credit-card.html
@@ -86,7 +86,7 @@
             </div>
         </div>
         <div class="x_top_bank">
-            <div>
+            <!-- <div> -->
                 <div class="x_bank_list">
                     <span><i></i>银行快速导航</span>
                 </div>
@@ -588,7 +588,7 @@
                         </ul>
                     </div>
                 </div>
-            </div>
+            <!-- </div> -->
             <div class="x_top_nav">
                 <ul>
                     <li>
